<resources>
    <string name="ble_not_supported">BLE not supported on this device</string>
    <string name="bt_unavailable">Bluetooth unavailable</string>
    <string name="bt_disabled">Bluetooth disabled, turn on and restart</string>
    <string name="welcome">\nPlease wait a moment and then select your D6 Fitness Tracker.\n</string>
    <string name="open_privacy_policy">View our <a href="https://atcnetz.de/privacy_policy.html">Privacy Policy</a> here.</string>

    <string name="welcome_Text">Welcome to the D6 Notification App</string>
    <string name="notification_checkbox_text">Notification\'s</string>
    <string name="log_msg_checkbox">Log MSG\'s</string>
    <string name="devName_text">Name: No Device</string>
    <string name="macText">MAC: No Device</string>
    <string name="devType_Textview">Device: No Device</string>
    <string name="battery_text">Battery: No Device</string>
    <string name="clear_log">Clear</string>
    <string name="settings_button_description">Settings Button</string>
    <string name="steps_textview">0</string>
    <string name="heartRate_textview">0</string>
    <string name="hearticondescription">HeartIconDescription</string>
    <string name="steps_icon_description">Steps Icon Description</string>
    <string name="deviceimage_description">deviceImage Description</string>
    <string name="editTextHint">Custom Command EditText</string>
    <string name="CustomCommandText">AT+PUSH=0,1234567890,0,1</string>
    <string name="customCmdButtonText">Custom\nCMD</string>
    <string name="apply">Apply</string>
    <string name="back">Back</string>
    <string name="mqtt_settings">MQTT Settings</string>
    <string name="no_data_saved">No data saved.</string>
    <string name="name">Name</string>
    <string name="name_label">Name:</string>
    <string name="_12345678">12345678</string>
    <string name="mqtt_pw">MQTT PW:</string>
    <string name="user">User</string>
    <string name="mqtt_user_label">MQTT User:</string>
    <string name="mqtt_server_label">MQTT Server:</string>
    <string name="server_url">Server URL</string>
</resources>
